--- a/api-project/api-project/styles/style.css
+++ b/api-project/api-project/styles/style.css
@@ -1,5 +1,12 @@
 body, 
-html, 
-* {
-    
+main, 
+* { 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
