--- a/api-project/api-project/styles/style.css
+++ b/api-project/api-project/styles/style.css
@@ -3,25 +3,33 @@ main,
 * { 
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
   font-family: 'Lato', sans-serif;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  background-color: aliceblue;
 }
 
 .bundle-images {
-  width: 20vw;
-  align-self: center;
+  width: 14vw;
+  height: 6.9vw;
+}
+
+#display {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  margin-top: auto;
 }
 
 .card {
-  width: 21%;
-  text-align: center;
-  border: 3px solid black;
-  border-radius: 10px;
-  margin-bottom: 20px;
-  
- 
+  width: 17%;
+   text-align: center;
+   border: 3px solid black;
+   border-radius: 10px;
+   margin-bottom: 20px;
+   height: 160px;
 }
+
+h2 {
+  font-size: 1.2rem;
+  align-self: center;
+}
+
