--- a/api-project/api-project/styles/style.css
+++ b/api-project/api-project/styles/style.css
@@ -5,6 +5,7 @@ main,
   padding: 0;
   font-family: 'Lato', sans-serif;
   background-color: aliceblue;
+  text-align: center;
 }
 
 .bundle-images {
@@ -25,6 +26,7 @@ main,
    border: 3px solid black;
    border-radius: 10px;
    margin-bottom: 20px;
+   margin-top: 100px;
    height: 160px;
 }
 
@@ -45,3 +47,4 @@ h1 {
 #header {
   text-align: center;
 }
+
