--- a/api-project/api-project/styles/style.css
+++ b/api-project/api-project/styles/style.css
@@ -24,10 +24,9 @@ main,
   width: 17%;
    text-align: center;
    border: 3px solid black;
-   border-radius: 10px;
    margin-bottom: 20px;
-   margin-top: 100px;
-   height: 160px;
+   margin-top: 75px;
+   height: 11rem;
 }
 
 h2 {
